# tree-sitter-hy

./: .gitignore  BUGFIX_SERIALIZATION.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.org  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-hy.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hy/: binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: bracket_string_edge_cases.txt  identifiers.txt  issues.txt  literals.txt  other.txt  quoting.txt  s-expressions.txt
