[package]
name = "tree-sitter-hy"
description = "Hy grammar for tree-sitter"
version = "0.1.0"
authors = ["MinmusxMinmus <git.1khdc@simplelogin.com>"]
license = "GPL3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hy"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/minmusxminmus/tree-sitter-hy"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
